# action-hero

./: .gitignore  Cargo.toml  README.md
debian/: action-hero.service
doc/: otel-collector-config.yaml-example
src/: github.rs  history.rs  main.rs  traces.rs  webhook.rs
