[package]
name = "hero"
description = "Send GitHub Actions workflow history to OpenTelemetry as spans and traces"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["wrap_help"] }
opentelemetry = { version = "0.28.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.28.0", features = ["trace", "grpc-tonic"] }
opentelemetry-semantic-conventions = "0.28.0"
opentelemetry-stdout = "0.28.0"
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio"] }
reqwest = { version = "0.12.14", features = ["json"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
time = { version = "0.3.40", features = ["parsing"] }
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
