[package]
name = "hero"
description = "Send GitHub Actions workflow history to OpenTelemetry as traces and spans"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.3"
clap = { version = "4.5.32", features = ["wrap_help"] }
opentelemetry = { version = "0.29.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.29.0", features = ["trace", "grpc-tonic"] }
opentelemetry-semantic-conventions = "0.29.0"
opentelemetry-stdout = "0.29.0"
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
reqwest = { version = "0.12.14", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
time = { version = "0.3.40", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
